<resources>
    <string name="app_name">My Future</string>
    <string name="font">JetBrainsMono-VariableFont_wght.ttf</string>
    <string name="cyberfall">19700.ttf</string>
    // Первый экран
    <string name="start">Погнали!</string>
    <string name="Already">Уже зарегистрирован?</string>
    <string name="Come">Войти</string>
    // Авторизация
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="changePassword">Забыли пароль?</string>
    <string name="Registration">Регистрация</string>
    <string name="already_reg">Уже зарегистрированы?</string>
    // Регистрация
    <string name="RepeatPassword">Повторите пароль</string>
    // Дополнительные данные
    <string name="titleFilling">Заполнение данных</string>
    <string name="onward">Далее</string>
    <string name="save">Сохранить</string>
    // Основы приложения
    <string name="buttonIntro">Дальше</string>
    <string name="startProgram">Начинаем!</string>
    // Меню FlowingDrawer
    <string name="progress">Прогресс</string>
    <string name="license">Лицензия</string>
    <string name="help">Помощь</string>
    <string name="calculate">Калькуляторы</string>
    <string name="settings">Настройки</string>
    <string name="out">Выход</string>
    // Изменение данных
    <string name="ChangeData">Изменение данных</string>
    //Профиль
    <string name="ButtonChangeData">Изменить данные</string>
    <string name="weight">Вес:</string>
    <string name="Sponsor">Стать спонсором</string>

    //layout
    <string name="food">Питание</string>
    <string name="profile">Профиль</string>
    <string name="Train">Тренировки</string>
    <string name="Notepad">Блокнот</string>
    <string name="Forum">Форум</string>

    //food
    <string name="Calculator">Рассчитать каллории</string>
</resources>