<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/id_progress"
        android:icon="@drawable/settings"
        android:title="@string/progress" />
    <item
        android:id="@+id/id_license"
        android:icon="@drawable/settings"
        android:title="@string/license" />
    <item
        android:id="@+id/id_help"
        android:icon="@drawable/settings"
        android:title="@string/help" />
    <item
        android:id="@+id/id_calculate"
        android:icon="@drawable/settings"
        android:title="@string/calculate" />
    <item
        android:id="@+id/id_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/id_out"
        android:icon="@drawable/settings"
        android:title="@string/out" />

</menu>