<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000001"
    tools:context=".FirstScreenActivity">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:animateOnBoundary="false"
        app:indicatorVisibility="gone"
        app:pageTransformInterval="2200"
        app:pageTransformer="zoom"
        app:slideInterval="7000" />

    <TextView
        android:id="@+id/NameProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/audiowide"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/NameProject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:background="@drawable/shape_button"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="#d7ddcf"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Questions"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/buttonReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Already"
        android:textColor="#d7ddcf"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonAut"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/Questions"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:onClick="onClickAuthorizationActivity"
        android:text="@string/Come"
        android:textAllCaps="false"
        android:stateListAnimator="@animator/button_elevation"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>
