<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shortcut_logo" />

    <LinearLayout
        android:id="@+id/RegLayout"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_login"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <EditText
            android:id="@+id/email_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repeat_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/RepeatPassword"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_button"
        android:fontFamily="@font/roboto"
        android:text="@string/Registration"
        android:textColor="#d7ddcf" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>